@@ -5,7 +5,7 @@ Fit: "FitExample"
   HistoPath: "ExampleInputs"
 %   FitType: CONTROLSIGNAL
   FitType: CONTROL
-  DebugLevel: 1
+  DebugLevel: 0
   SystControlPlots: TRUE
 
   
